--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,11 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+
+"prisma": {
+  "seed": "ts-node prisma/seed.ts"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
